fix(ModalPage): ограничить область контента с помощью bottom-inset (#5715)
* Apply bottom-inset height in ModalPage transition calculation

Added new ref specially for bottom-inset to be able to get the
inset value by getting height of the element.

Use the bottom-inset value in content height during transition
calculation to make sure we move modal up not only by the height of the
content, but also by the height of the bottom-inset otherwise modal
content might be hidden by the bottom-inset.

Use this ref for new div element inside content-wrap.
Div element we need not only to use in calculation but also to limit
content scroll to make sure scroll visually ended before the
bottom-inset.

--- a/packages/vkui/src/components/ModalPage/ModalPage.module.css
+++ b/packages/vkui/src/components/ModalPage/ModalPage.module.css
@@ -123,10 +123,13 @@
   height: 100%;
 }
 
-.ModalPage__content-in::after {
-  content: '';
+/* существует для того, чтобы использовать в расчёте translateY
+ * чтобы поднять ModalPage не только на высоту контента, но и на высоту bottom-inset
+ * особенно важно для ModalPage c динамической высотой
+ */
+.ModalPage__bottom-inset {
   height: var(--vkui_internal--safe_area_inset_bottom);
-  display: block;
+  flex-shrink: 0;
 }
 
 /**
